# fashion-trend-intelligence

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: environnement_poetry.md  project_structure.md
notebooks/: 00_huggingface_api_cloth_seg.ipynb  00_viz_example.ipynb  01_setup_env.ipynb  02_segmentation.ipynb  03_cost_estimation.ipynb
src/fashion_trend_intelligence/: config.py  cost_estimation.py  segmentation.py  utils.py  visualization.py
tests/: test_cost_estimator.py  test_segmentation.py  test_visualization.py
