[project]
name = "fashion-trend-intelligence"
version = "0.1.0"
description = ""
authors = [
    {name = "Damien GUESDON",email = "kisai.dg.slu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "requests",
  "python-dotenv",
  "huggingface-hub",
  "transformers",
  "torch",
  "Pillow",
  "numpy",
  "matplotlib",
  "pycocotools"
]

[tool.poetry]
packages = [
  { include = "fashion_trend_intelligence", from = "src" }
]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.4"
ipykernel  = "^6.29.5"
pytest     = "^8.4.1"
flake8     = "^7.3.0"
black      = "^25.1.0"
pre-commit = "^4.2.0"

[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
